--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: git config user.email "mf.freese@gmail.com"
-    - run: git config user.name "Matt Freese"
+    - run: git config user.name "mjfreese"
     - run: npm ci
-    - run: npm install
     - run: npm run deploy
