--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Deploy mazes
 
 on:
   push:
@@ -29,4 +29,11 @@ jobs:
     - run: git config user.email "mf.freese@gmail.com"
     - run: git config user.name "mjfreese"
     - run: npm ci
-    - run: npm run deploy
+    - run: npm run build
+    
+    - name: GitHub Pages v3
+      uses: peaceiris/actions-github-pages@v3.1.12
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
+  
