--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,10 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Install and Build
-        run: |
+        with:
+          node-version: 16.x
+          cache: 'npm'
+      - run: |
           npm ci
           npm run build
       - name: Deploy 🚀
@@ -19,4 +22,3 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: build # The folder the action should deploy.
-          target-folder: examples # The destination. Shouldn't touch other folders.
