--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,16 +7,13 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-
-      - name: Install and Build
+      - uses: actions/checkout@v2
         with:
           node-version: 16.x
           cache: 'npm'
-      - run: |
-          npm ci
-          npm run build
+      - run: npm ci
+      - run: npm run build
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
