--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Build and Deploy to GitHub Pages
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - master
+      
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
