switch to hash router, fix homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "mjfreese.github.io/mazes",
+  "homepage": "https://mjfreese.github.io/mazes",
   "name": "mazes",
   "version": "0.1.0",
   "private": true,
