--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-grid-layout": "^1.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use-measure": "^2.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
