--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^11.2.7",
+    "eslint-config-react-app": "^7.0.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.2.5",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-use-measure": "^2.0.4",
-    "web-vitals": "^1.0.1"
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
